src/objects/Proposal_Quals_Info__c.object
<CustomObject>
    <description>General proposal info: boilerplate, IDs, standard text, standard responses, links to key data on myAECOM</description>
    <fields>
        <fullName>Information__c</fullName>
        <description>Text of boilerplate information</description>
        <inlineHelpText>Enter the text of the record here.</inlineHelpText>
        <label>Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Review__c</fullName>
        <description>date this content was last reviewed</description>
        <inlineHelpText>Enter date this content was last reviewed</inlineHelpText>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_source__c</fullName>
        <description>Link to data maintained by another department</description>
        <inlineHelpText>Copy and paste the link to data maintained by another department. Make sure page is on myAECOM or other accessible location.</inlineHelpText>
        <label>Link to source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Media_Bank_Image__c</fullName>
        <label>Media Bank Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Note_to_User__c</fullName>
        <description>important information the user should know before using this information</description>
        <inlineHelpText>Enter important information the user should know before using this information</inlineHelpText>
        <label>Note to User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed_Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of person who last reviewed or approved.</description>
        <inlineHelpText>Enter name of person who last reviewed or approved this information</inlineHelpText>
        <label>Reviewed/Approved by</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Proposal/Quals Info</relationshipLabel>
        <relationshipName>Proposal_Quals_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Describes where this information came from</description>
        <inlineHelpText>Enter person or communication or other source of this information.</inlineHelpText>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Proposal/Quals Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Review__c</columns>
        <columns>Link_to_source__c</columns>
        <columns>Note_to_User__c</columns>
        <columns>Information__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Last_Review__c</columns>
        <columns>Link_to_source__c</columns>
        <columns>Note_to_User__c</columns>
        <columns>Information__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>emergency</value>
        </filters>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records1</fullName>
        <columns>NAME</columns>
        <columns>Last_Review__c</columns>
        <columns>Link_to_source__c</columns>
        <columns>Note_to_User__c</columns>
        <columns>Information__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>response</value>
        </filters>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Proposal/Quals Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal/Quals Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>